Added swagger doc for route update user password
